@@ -13,7 +13,7 @@
     <name>client</name>
     <url>http://maven.apache.org</url>
     <build>
-        <!-- <resources>
+        <resources>
             <resource>
                 <directory>src/main/resources</directory>
                 <excludes>
@@ -21,7 +21,7 @@
                     <exclude>proxyclient.properties</exclude>
                 </excludes>
             </resource>
-        </resources> -->
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -30,6 +30,43 @@
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>appassembler-maven-plugin</artifactId>
+                <version>1.1.1</version>
+                <configuration>
+                    <repositoryLayout>flat</repositoryLayout>
+                    <repositoryName>lib</repositoryName>
+                    <configurationSourceDirectory>src/main/resources</configurationSourceDirectory>
+                    <!-- Set the target configuration directory to be used in the bin scripts -->
+                    <configurationDirectory>conf</configurationDirectory>
+                    <!-- Copy the contents from "/src/main/config" to the target configuration
+                        directory in the assembled application -->
+                    <copyConfigurationDirectory>true</copyConfigurationDirectory>
+                    <!-- Include the target configuration directory in the beginning of
+                        the classpath declaration in the bin scripts -->
+                    <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
+                    <!-- prefix all bin files with "mycompany" -->
+                    <!--<binPrefix>startup</binPrefix>-->
+                    <!-- set alternative assemble directory -->
+                    <assembleDirectory>${project.build.directory}/client</assembleDirectory>
+                    <!-- Extra JVM arguments that will be included in the bin scripts -->
+                    <extraJvmArguments>-Xms768m -Xmx768m -XX:PermSize=128m
+                        -XX:MaxPermSize=256m -XX:NewSize=192m -XX:MaxNewSize=384m
+                    </extraJvmArguments>
+                    <!-- Generate bin scripts for windows and unix pr default -->
+                    <platforms>
+                        <platform>windows</platform>
+                        <platform>unix</platform>
+                    </platforms>
+                    <programs>
+                        <program>
+                            <mainClass>com.virjar.dungproxy.client.ippool.PreHeater</mainClass>
+                            <name>preHeater</name>
+                        </program>
+                    </programs>
                 </configuration>
             </plugin>
             <plugin>
